Fix filter layout on mobile

--- a/frontend/src/assets/css/addButton.css
+++ b/frontend/src/assets/css/addButton.css
@@ -13,17 +13,17 @@
 }
 
 .btn-add{
-    background-color:#4eb5f1;
+    background-color:#2b94e9;
 }
 
 .btn-add:hover{
-    background-color:#4095c6;
+    background-color:#1a598d;
 }
 
 .btn-remove{
-    background-color:#f14e4e;
+    background-color:#e92b2b;
 }
 
 .btn-remove:hover{
-    background-color:#bb3b3b;
+    background-color:#8d1a1a;
 }
